<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchBottomNav"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/favoritesBottomNav"
        android:icon="@drawable/heart_icon"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/responsesBottomNav"
        android:title="@string/responses"
        android:icon="@drawable/responses_icon"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/messagesBottomNav"
        android:icon="@drawable/messages_icon"
        android:title="@string/messages"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/profileBottomNav"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>