<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".screens.Response"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dp16" />

    <ImageView
        android:id="@+id/resume_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:src="@drawable/response_icon"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/resume_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cv"
        android:layout_marginStart="@dimen/dp16"
        android:textColor="@color/grey3"
        style="@style/RegularText.14size"
        app:layout_constraintStart_toEndOf="@id/resume_icon"
        app:layout_constraintTop_toTopOf="@id/resume_icon"/>

    <TextView
        android:id="@+id/job_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        style="@style/MediumText.16size"
        android:text="@string/ui_ux"
        tools:text="@string/ui_ux"
        app:layout_constraintStart_toEndOf="@id/resume_icon"
        app:layout_constraintTop_toBottomOf="@id/resume_text"
        app:layout_constraintBottom_toBottomOf="@id/resume_icon"/>

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey2"
        app:layout_constraintTop_toBottomOf="@id/resume_icon"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        android:layout_marginTop="@dimen/dp16"
        />

    <TextView
        android:id="@+id/add_cover_letter_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/add_letter"
        tools:text="@string/add_letter"
        style="@style/SemiboldText"
        android:textColor="@color/green"
        android:textSize="16sp"

        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        android:layout_marginTop="@dimen/dp32"/>


    <Button
        android:id="@+id/apply_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp16"
        android:backgroundTint="@color/green"
        android:text="@string/respons"
        tools:text="@string/respons"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="@dimen/dp8"
        style="@style/RegularText.14size"
        app:layout_constraintTop_toBottomOf="@+id/add_cover_letter_text"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>